--- a/pages/team.html
+++ b/pages/team.html
@@ -163,6 +163,7 @@
             <!-- Ethical AI -->
             <article class="value-card">
                 <img src="../assets/icons/feather/shield.svg" class="value-icon" alt="Ethical AI value icon">
+                <h3>Ethics</h3>
                 <p>
                     Ethics is at the heart of everything we do. We are committed to developing AI 
                     solutions that respect privacy, promote fairness, and serve the common good.
@@ -172,6 +173,7 @@
             <!-- Collaboration -->
             <article class="value-card">
                 <img src="../assets/icons/feather/edit-3.svg" class="value-icon" alt="Collaboration value icon">
+                <h3>Developer friendly</h3>
                 <p>
                     We know that great ideas come from diverse minds working together. Collaboration 
                     is the key to our success, both within our team and with our clients.
@@ -181,6 +183,7 @@
             <!-- User-Centric Design -->
             <article class="value-card">
                 <img src="../assets/icons/feather/user.svg" class="value-icon" alt="User-Centric Design value icon">
+                <h3>User friendly</h3>
                 <p>
                     Our users are our top priority. We design AI solutions that are intuitive, 
                     user-friendly, and enhance the lives of those who use them.
@@ -190,6 +193,7 @@
             <!-- Positive Impact -->
             <article class="value-card">
                 <img src="../assets/icons/feather/plus.svg" class="value-icon" alt="Positive Impact value icon">
+                <h3>Positive impact</h3>
                 <p>
                     We measure success by the positive impact our AI solutions have on society. 
                     From improving healthcare to reducing environmental impact, we're dedicated to 
